# KBSkills

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.md
KBase/: urls.txt
skills/: first_principles.yaml  swot_analysis.yaml  systems_thinking.yaml
src/kbskills/: __init__.py  cli.py  config.py
src/kbskills/agent/: prompts.py  topic_agent.py
src/kbskills/ingestion/: audio.py  file_loader.py  pipeline.py  url_parser.py  web_scraper.py  youtube.py
src/kbskills/knowledge/: graph_builder.py  store.py
src/kbskills/skills/: executor.py  loader.py  matcher.py
src/kbskills/utils/: retry.py  text.py
test_data/: urls.txt
test_data/docs/: ai_education.md  education_technology_trends.txt  machine_learning_fundamentals.md
tests/: conftest.py  test_config.py  test_retry.py  test_skills_executor.py  test_skills_loader.py  test_skills_matcher.py  test_text_utils.py  test_url_parser.py
